--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <!-- TODO: Add proper viewport meta tag to make page properly display on mobile devices. -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="PNW Traveller">
+  <meta name="author" content="Jon Hetrick">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>PNW Traveller</title>
+  <link rel="shortcut icon" href="./images/pine-tree-gross-outline.png" type="image/x-icon">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
