--- a/index.html
+++ b/index.html
@@ -23,13 +23,33 @@
 </head>
 
 <body>
-
-  <!-- (1)Navigation -->
-  <!-- TODO implement responsive navigation that matches your IA design -->
   <!-- TODO put this nav on every page -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    
+  <!--Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">PNW Traveller</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blogs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
   </nav>
+  <!-- End NavBar -->
 
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -40,29 +60,20 @@
       </ol>
 
       <!-- Wrapper for slides -->
-
-      <!-- TODO: (2)Add images to your repository and update this code so the carousel has proper slides. -->
-
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item active" style="background-image: url('images/coffee-5.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>First Slide</h3>
-            <p>This is a description for the first slide.</p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('images/coffee-6.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
-            <p>This is a description for the second slide.</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('images/bar-7.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
           </div>
         </div>
       </div>
@@ -87,7 +98,8 @@
         <div class="card h-100">
           <h4 class="card-header">Card Title</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
+              neque.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
@@ -98,10 +110,11 @@
         <div class="card h-100">
           <h4 class="card-header">Card Title</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam
+              perspiciatis natus commodi
               similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni
               nostrum sint fuga.</p>
-              </div>
+          </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
           </div>
@@ -111,7 +124,8 @@
         <div class="card h-100">
           <h4 class="card-header">Card Title</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
+              neque.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
@@ -123,99 +137,109 @@
 
 
     <!-- Portfolio Section -->
-     <!-- (3)TODO: Add the proper "row" and "col" classes to make this display work the way it should. -->
+    <!-- (3)TODO: Add the proper "row" and "col" classes to make this display work the way it should. -->
     <!-- This section shoudld be contained in a row. -->
     <!-- This section should have columns that are 4 units wide at size "md" and above, but 6 units wide at size "sm" and below. -->
 
     <h2>Portfolio Heading</h2>
 
     <div class="row">
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/Porfolio/portoflio-6.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project One</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt?
-              Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum
+              quasi sapiente nesciunt?
+              Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil,
+              dolorem!</p>
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/Porfolio/portfolio-5.jpg" alt="">
           </a>
-                    <div class="card-body">
+          <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Two</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+              gravida pellentesque urna
               varius vitae.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="portfolio-item">
-      <div class="card h-100">
-        <a href="#">
-          <img class="card-img-top" src="http://placehold.it/700x450" alt="">
-        </a>
-        <div class="card-body">       
-               <h4 class="card-title">
-          <a href="#">Project Three</a>
-        </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio
-          velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
-      </div>
-        </div>
-      </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/Porfolio/portfolio-1.jpg" alt="">
+          </a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Project Three</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed
+              cumque, odio distinctio
+              velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel
+              quam!</p>
+          </div>
+        </div>
+      </div>
+      <div class="portfolio-item col-sm-6 col-md-4">
+        <div class="card h-100">
+          <a href="#">
+            <img class="card-img-top" src="images/Porfolio/portfolio-2.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Four 600x400 instead of 700x400</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+              gravida pellentesque urna
               varius vitae.</p>
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/Porfolio/portfolio-3.jpg"">
           </a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Five</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+              gravida pellentesque urna
               varius vitae.</p>
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/Porfolio/portfolio-4.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Six</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident,
-              perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit
+              ducimus nihil provident,
+              perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.
+            </p>
           </div>
         </div>
       </div>
     </div>
     <!-- /.row -->
+    <!-- end portfolio  -->
 
     <!-- Features Section -->
     <div class="row">
@@ -231,10 +255,11 @@
           <li>Working contact form with validation</li>
           <li>Unstyled page elements for easy customization</li>
         </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam
-            totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.
-          </p>      
-        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
+          reprehenderit, quisquam
+          totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.
+        </p>
+      </div>
       <div class="col-lg-6">
         <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
       </div>
@@ -245,10 +270,11 @@
 
     <!-- Call to Action Section -->
     <div class="row mb-4">
-        <div class="col-md-8">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae
-              veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-          </div>
+      <div class="col-md-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti
+          beatae
+          veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+      </div>
       <div class="col-md-4">
         <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
       </div>
@@ -259,13 +285,13 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-  <!-- (4)TODO User flex-box to replace the centered paragraph with copyright and date with 2 paragraphs: the first paragraph is left aligned and contains copyright and date 
+    <!-- (4)TODO User flex-box to replace the centered paragraph with copyright and date with 2 paragraphs: the first paragraph is left aligned and contains copyright and date 
       and one that is right aligned and contains your name.
       Put the footer on every page.
     -->
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+    </div>
     <!-- /.container -->
   </footer>
 
