Removed old files, Added new images, Puesdo Elements & Class, Updates to all pages.

--- a/blogs.html
+++ b/blogs.html
@@ -63,26 +63,80 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Services
+    <h1 class="mt-4 mb-3">Blogs
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
         <a href="index.html">Home</a>
       </li>
-      <li class="breadcrumb-item active">Services</li>
+      <li class="breadcrumb-item active">Blogs</li>
     </ol>
 
-    <!-- Image Header -->
-    <img class="img-fluid rounded mb-4" src="./images/Services/services-1.jpg" alt="">
+    <div class="row">
 
-    <h3>Your Buisness Need Honest Ratings!</h3>
-    <p>Everyone needs to hear the harsh truth sometime. As a PNW Traveller I offer your buisness some honest feedback to
-      your Buisness. From the Entry to
-      the last sip of coffee. If that is something that your interested in that feel free to reach out. Specializing in
-      coffe and bar reviews for anywhere in the PNW.
-    </p>
-    <p><strong>Futher Details on Pricing - Dropping Soon!</strong></p>
+      <!-- Blog Entries Column -->
+      <div class="col-md-8">
+
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="./images/Blog/Blog-1.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">Top Seattle Coffee Shops</h2>
+            <p class="card-text">First thing is first lets start in the one and only Seattle....
+              Where can we chill and have a couple cappacinos and not feel rushed to get out of the shop? Hmmm.....
+            </p>
+          </div>
+          <div class="card-footer text-muted">
+            Posted on November 17, 2019 by
+            <a href="#">Jon Hetrick</a>
+          </div>
+        </div>
+
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="./images/Blog/blog-2.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">Where to go in Seattle after Dark?</h2>
+            <p class="card-text">Let our PNW Traveller Pro enlighten you with some of the top spots to spend those rainy
+              nights in Seattle that will make you forget where you are..... </p>
+          </div>
+          <div class="card-footer text-muted">
+            Posted on November 16, 2019 by
+            <a href="about.html">Jon Hetrick</a>
+          </div>
+        </div>
+        <!-- End BLog Entries  -->
+
+        <!-- Pagination -->
+        <ul class="pagination justify-content-center mb-4">
+          <li class="page-item">
+            <a class="page-link" href="#">&larr; Older</a>
+          </li>
+          <li class="page-item disabled">
+            <a class="page-link" href="#">Newer &rarr;</a>
+          </li>
+        </ul>
+
+      </div>
+
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+
+        <!-- Side Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Whats New!</h5>
+          <div class="card-body">
+            SOON TO BE INSTAGRAM FEED!
+          </div>
+        </div>
+
+      </div>
+      <!-- End Sidebar -->
+
+    </div>
+    <!-- /.row -->
+
   </div>
   <!-- /.container -->
 
