--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Jon Hetrick">
 
   <title>PNW Traveller</title>
-  <link rel="shortcut icon" href="./images/pine-tree-gross-outline.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/Favicon/favicon.png" type="image/x-icon">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,33 +23,40 @@
 </head>
 
 <body>
-  <!-- TODO put this nav on every page -->
-  <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">PNW Traveller</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Blogs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
+  <!-- Navigation -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">PNW Traveller</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="blogs.html">Blogs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item active dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Other Pages
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+              <a class="dropdown-item active" href="404.html">404</a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
-  <!-- End NavBar -->
+  <!-- End Navigation -->
 
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -62,17 +69,17 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('images/coffee-5.jpg')">
+        <div class="carousel-item active" style="background-image: url('images/Carousel/carousel-3.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('images/coffee-6.jpg')">
+        <div class="carousel-item" style="background-image: url('images/Carousel/carousel-2.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('images/bar-7.jpg')">
+        <div class="carousel-item" style="background-image: url('images/Carousel/carousel-1.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -90,59 +97,10 @@
 
   <!-- Page Content -->
   <div class="container">
-    <h1 class="my-4">Welcome to Modern Business</h1>
+    <h1 class="my-4">Welcome to PNW Traveller!</h1>
 
-    <!-- Marketing Icons Section -->
-    <div class="row">
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-              neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam
-              perspiciatis natus commodi
-              similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni
-              nostrum sint fuga.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-              neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /.row -->
-
-
-    <!-- Portfolio Section -->
-    <!-- (3)TODO: Add the proper "row" and "col" classes to make this display work the way it should. -->
-    <!-- This section shoudld be contained in a row. -->
-    <!-- This section should have columns that are 4 units wide at size "md" and above, but 6 units wide at size "sm" and below. -->
-
-    <h2>Portfolio Heading</h2>
-
+    <h2>Recent Reviews</h2>
+    <!-- Protfolio Start -->
     <div class="row">
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
@@ -151,12 +109,9 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <a href="#">Coffee Shop 1</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum
-              quasi sapiente nesciunt?
-              Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil,
-              dolorem!</p>
+            <p class="card-text">Content about this "Spot" and Star Review Rating</p>
           </div>
         </div>
       </div>
@@ -167,11 +122,9 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Two</a>
+              <a href="#">Speak Easy 1</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-              gravida pellentesque urna
-              varius vitae.</p>
+            <p class="card-text">Content about this "Spot" and Star Review Rating</p>
           </div>
         </div>
       </div>
@@ -182,12 +135,9 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Three</a>
+              <a href="#">Coffee Shop 2</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed
-              cumque, odio distinctio
-              velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel
-              quam!</p>
+            <p class="card-text">Content about this "Spot" and Star Review Rating</p>
           </div>
         </div>
       </div>
@@ -198,11 +148,9 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Four 600x400 instead of 700x400</a>
+              <a href="#">Bar 1</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-              gravida pellentesque urna
-              varius vitae.</p>
+            <p class="card-text">Content about this "Spot" and Star Review Rating</p>
           </div>
         </div>
       </div>
@@ -211,89 +159,82 @@
           <a href="#">
             <img class="card-img-top" src="images/Porfolio/portfolio-3.jpg"">
           </a>
-          <div class="card-body">
+          <div class=" card-body">
             <h4 class="card-title">
-              <a href="#">Project Five</a>
+              <a href="#">Coffee Shop 3</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-              gravida pellentesque urna
-              varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="portfolio-item col-sm-6 col-md-4">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="images/Porfolio/portfolio-4.jpg" alt="">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Six</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit
-              ducimus nihil provident,
-              perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.
-            </p>
-          </div>
+            <p class="card-text">Content about this "Spot" and Star Review Rating</p>
         </div>
       </div>
     </div>
-    <!-- /.row -->
-    <!-- end portfolio  -->
-
-    <!-- Features Section -->
-    <div class="row">
-      <div class="col-lg-6">
-        <h2>Modern Business Features</h2>
-        <p>The Modern Business template by Start Bootstrap includes:</p>
-        <ul>
-          <li>
-            <strong>Bootstrap v4</strong>
-          </li>
-          <li>jQuery</li>
-          <li>Font Awesome</li>
-          <li>Working contact form with validation</li>
-          <li>Unstyled page elements for easy customization</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
-          reprehenderit, quisquam
-          totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.
-        </p>
-      </div>
-      <div class="col-lg-6">
-        <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
+    <div class="portfolio-item col-sm-6 col-md-4">
+      <div class="card h-100">
+        <a href="#">
+          <img class="card-img-top" src="images/Porfolio/portfolio-4.jpg" alt="">
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Coffee Shop 4</a>
+          </h4>
+          <p class="card-text">Content about this "Spot" and Star Review Rating</p>
+        </div>
       </div>
     </div>
-    <!-- /.row -->
+  </div>
+  <!-- /.row -->
+  <!-- End Portfolio  -->
 
-    <hr>
-
-    <!-- Call to Action Section -->
-    <div class="row mb-4">
-      <div class="col-md-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti
-          beatae
-          veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-      </div>
-      <div class="col-md-4">
-        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
-      </div>
+  <!-- Features Section -->
+  <div class="row">
+    <div class="col-lg-6">
+      <h2>How we rate our "Spots"</h2>
+      <p> Grounds on which the PNW Traveller makes thier fair and honest judgement on rated Bars and Coffee Shops
+        through the PNW. </p>
+      <ul>
+        <li>First Impressions</li>
+        <li>Timing of Service</li>
+        <li>Quality of the item ordered</li>
+        <li>Presentation of Items</li>
+        <li>Taste</li>
+        <li>Could I stay here for hours?</li>
+      </ul>
+      <p>All items are pending a scale we will then grade each place per list item and then total out and give the
+        "Spot" a 1 - 10 rating with stars</p>
     </div>
+    <div class="col-lg-6">
+      <img class="img-fluid rounded" src="./images/Home/home-page-1.jpg" alt="">
+    </div>
+  </div>
+  <!-- /.row -->
+
+  <hr>
+
+  <!-- Call to Action Section -->
+  <div class="row mb-4">
+    <div class="col-md-8">
+      <p>
+        <strong>In the Works -</strong> Apply to join PNW Traveller's select Raters
+      </p>
+    </div>
+    <div class="col-md-4">
+      <a class="btn btn-lg btn-secondary btn-block disabled" href="#">Call to Action</a>
+    </div>
+  </div>
 
   </div>
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <!-- (4)TODO User flex-box to replace the centered paragraph with copyright and date with 2 paragraphs: the first paragraph is left aligned and contains copyright and date 
-      and one that is right aligned and contains your name.
-      Put the footer on every page.
-    -->
+  <footer class="py-5 bg-light">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+      <div class="footer-flex">
+        <p class="footer-item-flex text-black-50">Copyright &copy; PNW Traveller 2020</p>
+        <p class="footer-item-flex text-black-50">Jon Hetrick</p>
+      </div>
     </div>
     <!-- /.container -->
   </footer>
+  <!-- End Footer -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
