Added img-fluid to all images

--- a/blogs.html
+++ b/blogs.html
@@ -80,7 +80,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="./images/Blog/Blog-1.jpg" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="./images/Blog/Blog-1.jpg" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Top Seattle Coffee Shops</h2>
             <p class="card-text">First thing is first lets start in the one and only Seattle....
@@ -95,7 +95,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="./images/Blog/blog-2.jpg" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="./images/Blog/blog-2.jpg" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Where to go in Seattle after Dark?</h2>
             <p class="card-text">Let our PNW Traveller Pro enlighten you with some of the top spots to spend those rainy
