--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="./images/About/aboutme-1.jpg" alt="">
+          <img class="card-img-top img-fluid" src="./images/About/aboutme-1.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Jon Hetrick</h4>
             <h6 class="card-subtitle mb-2 text-muted">Founder</h6>
