--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('images/Carousel/carousel-3.jpg')">
+        <div class="carousel-item active img-fluid" style="background-image: url('images/Carousel/carousel-3.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('images/Carousel/carousel-2.jpg')">
+        <div class="carousel-item img-fluid" style="background-image: url('images/Carousel/carousel-2.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('images/Carousel/carousel-1.jpg')">
+        <div class="carousel-item img-fluid" style="background-image: url('images/Carousel/carousel-1.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -105,7 +105,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/Porfolio/portoflio-6.jpg" alt="">
+            <img class="card-img-top img-fluid" src="images/Porfolio/portoflio-6.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -118,7 +118,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/Porfolio/portfolio-5.jpg" alt="">
+            <img class="card-img-top img-fluid" src="images/Porfolio/portfolio-5.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -131,7 +131,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/Porfolio/portfolio-1.jpg" alt="">
+            <img class="card-img-top img-fluid" src="images/Porfolio/portfolio-1.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -144,7 +144,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/Porfolio/portfolio-2.jpg" alt="">
+            <img class="card-img-top img-fluid" src="images/Porfolio/portfolio-2.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -157,7 +157,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/Porfolio/portfolio-3.jpg"">
+            <img class="card-img-top img-fluid" src="images/Porfolio/portfolio-3.jpg"">
           </a>
           <div class=" card-body">
             <h4 class="card-title">
@@ -170,7 +170,7 @@
     <div class="portfolio-item col-sm-6 col-md-4">
       <div class="card h-100">
         <a href="#">
-          <img class="card-img-top" src="images/Porfolio/portfolio-4.jpg" alt="">
+          <img class="card-img-top img-fluid" src="images/Porfolio/portfolio-4.jpg" alt="">
         </a>
         <div class="card-body">
           <h4 class="card-title">
